2009-04-13  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.5
	* Changed screensaver poke method to be a configurable command (Default: gnome-screensaver-command --poke)

2009-04-12  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.4
	* Fix for forward slashes in description (LP: #359710)

2009-04-09  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.3
	* Fixed bug where instant record was stopped because scheduled_recording_id is not being cleared

2009-04-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.2
	* Fix for bad EPG data collection if multiple languages
	* Fixed errors from Gentoo output

2009-04-05  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.1
	* Creating ~/.me-tv directory on startup (LP: #353796) 
	* Fix for extended EPG events so that descriptions make sense

2009-03-28  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.0
	* DVB-S support added
	* Updates to scan window UI to be more DVB-S friendly
	* Removed support for Profiles (not used)
	* Rewrote database tier so data access is more consistent
	* EPG fix where some events not displaying
	* Finally fixed mute on restore when using xine engine 
	* Added a database version check
	* Audio streams now work

2009-03-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.16
	* Fix so to increase the granularity of the GTK EPG widget
	* Small performance fixes

2009-02-20  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.15
	* Added support for 2 tuner devices
	* Fixed a performance issue where the EPG was causing temporary lockups

2009-02-11  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.14
	* Fix so that minimise mode does not crash
	* Fix so that status icon shows current event
	* Compatibility changes for 2.6.29 kernel
	* ATSC support! (but not for scanning)

2009-02-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.13
	* Removed my email address from the application
	* Fixed performance issue when calling data.vacuum()
