@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2009-04-13" "0.8.5" "Me TV Manual"
+.TH "ME TV" 1 "2009-04-15" "0.8.5" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
