@@ -1,7 +1,8 @@
-2009-04-13  Michael Lamothe <michael.lamothe@gmail.com>
+2009-04-15  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 0.8.5
 	* Changed screensaver poke method to be a configurable command (Default: gnome-screensaver-command --poke)
+	* Fixed channel persistence (LP: #361514)
 
 2009-04-12  Michael Lamothe <michael.lamothe@gmail.com>
 
